[gd_scene load_steps=2 format=3 uid="uid://card_preview_test"]

[ext_resource type="Script" path="res://scripts/debug/character_type_card_preview.gd" id="1_script"]

[node name="CardPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CharacterTypeCard Preview"
horizontal_alignment = 1

[node name="TypeCardsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TypeSectionLabel" type="Label" parent="MarginContainer/VBoxContainer/TypeCardsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Type Cards (Character Creation)"

[node name="TypeCardsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TypeCardsSection"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 4

[node name="PlayerCardsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerSectionLabel" type="Label" parent="MarginContainer/VBoxContainer/PlayerCardsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Player Cards (Barracks)"

[node name="PlayerCardsHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PlayerCardsSection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ControlsSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TierButton" type="Button" parent="MarginContainer/VBoxContainer/ControlsSection"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Tier: FREE (tap to cycle)"

[node name="StatusSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1.0)
theme_override_font_sizes/font_size = 16
text = "Status: Ready"
